--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
   <section class="hero" aria-label="hero">
     <div class="hero-content">
       <h1>Hi — I'm Huzaifa Moin</h1>
-      <div class="subtitle">Data Management Assistant</div>
+      <div class="subtitle">Data Analyst</div>
       <p>I turn data into clear insights and business outcomes using SQL, Power BI, Python, and Excel — dashboards, forecasts, and anomaly detection that decision-makers trust.</p>
       <div class="hero-cta">
         <button class="btn btn-primary" onclick="document.getElementById('projects').scrollIntoView({behavior:'smooth'})">View My Projects</button>
@@ -345,7 +345,7 @@
       {
         title: "Cover Installation Progress Dashboard | Project Management (Sep 2025)",
         thumbnail: "https://i.postimg.cc/SsRxLt8X/BYD.png",
-        details: "Visualized progress of cover installation milestones in project management. Shows milestones by zone, completion %, and highlights delays so project managers can act quickly."
+        details: "The BYD Cover Installation Progress dashboard shows strong progress in some zones but major gaps in others. Zones 5 and 6 are fully completed, and Zone 7 is 98.75% complete, while Zone 4 is about 48.61% done; however, Zones 1, 2, and 3 have not yet started, creating a backlog. Daily achievements have been highly inconsistent, with peaks such as 680 installations on August 30 and sharp drops, including zero work on August 25 and September 2, which suggests stoppages or reporting gaps. The overall progress trend mirrors these fluctuations, with highs of 14.53% on August 30 and very low contributions on other days. While the team has shown the capacity for high productivity, uneven zone progress and unstable daily performance pose risks to timely completion. To ensure on-time delivery, it is critical to initiate work in Zones 1–3, reallocate resources from completed areas, stabilize productivity through better planning, and investigate causes of zero-progress days."
       },
       {
         title: "Budget Overview Dashboard | Education Sector (Sep 2025)",
@@ -359,11 +359,6 @@
         link: "https://www.datacamp.com/datalab/w/f6ed2b37-9d27-41b7-9346-44b732731754/edit"
       },
       {
-        title: "Performance Evaluation Dashboard | Power BI (Jul 2025)",
-        thumbnail: "https://i.postimg.cc/TYggWpfz/Dashboard.png",
-        details: "Tracked employee performance across multiple metrics. Integrated HR and operational data sources to give management a consolidated view of KPIs and improvement areas."
-      },
-      {
         title: "HSE Projects Dashboard | Power BI (Jul 2025)",
         thumbnail: "https://i.postimg.cc/mDk7cjgj/stream1-vs-stream2.png",
         details: "Tracks Health, Safety & Environmental project performance and compliance. Visualizes incidents, audit scores, and corrective actions to maintain safety standards."
@@ -375,7 +370,7 @@
       },
       {
         title: "Product Distribution & Forecast Dashboard | Power BI (Aug 2025)",
-        thumbnail: "https://i.postimg.cc/TPXb9GYK/Screenshot-2025-08-03-171052.png",
+        thumbnail: "https://i.postimg.cc/8CPq5Rgb/Screenshot-2025-08-30-142430.png",
         details: "Combines historical sales and distribution data to forecast demand and optimize inventory distribution — reducing stockouts and excess inventory."
       },
       {
@@ -459,3 +454,4 @@
   </script>
 </body>
 </html>
+
