--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 }
 
 .experience-card {
-  background: #1e1e2f;
+  background: #1E1E1E;
   padding: 1.5rem;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.4);
@@ -454,4 +454,5 @@
   </script>
 </body>
 </html>
+
 
