--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
       {
         title: "Budget Overview Dashboard | Education Sector (Sep 2025)",
         thumbnail: "https://i.postimg.cc/254KczQM/Screenshot-2025-08-30-143023.png",
-        details: "Provided an overview of budget allocation and spending for the education sector. Visualizes allocation vs spend, flags overages, and helps ensure financial targets are met."
+        details: "The HISD Fiscal Year 2026 Budget Dashboard shows a total annual budget of $100.06M, of which $70.15M remains available and $28.35M has been spent, resulting in a budget utilization rate of 29.89%. The annual budget breakdown by funds indicates that Fund 199 holds the largest share at $48.76M (48.74%), followed by Fund 211 with $37.73M (37.71%), and Fund 499 with $13.56M (13.55%). The top expenditure categories by actual spend include General Supplies (largest share across Funds 199 & 211), Supplies – In Kind (fully charged to Fund 211), and Promo/Marketing (majority in Fund 211), while items such as Copy Paper and Postage are fully charged to Fund 199. Budget allocation across organizations highlights that divisions such as PUA, NES, and DEP Z receive the highest funding across funds, with Fund 199 consistently carrying the largest allocations. Division-level analysis shows the West Division leading with $20.09M available, followed by Central ($17.45M), South ($15.20M), and North ($12.89M), with the Department allocation at $4.51M. The annual vs. available budget comparison further shows Fund 199 as the most underutilized (only $2.44M spent from $48.76M), while Fund 211 has higher utilization ($14.16M spent from $37.73M). The decomposition tree reveals that significant expenditures flow through Departments ($6.79M) and Districtwide Schools ($3.38M), with notable actuals in Districtwide Operations ($1.67M) and Supplies – In Kind ($3.38M). Overall, while HISD has maintained a relatively low utilization rate under 30%, spending patterns show heavier reliance on Fund 211 and uneven allocation across divisions, suggesting room for improved budget balancing and efficiency in fund deployment."
       },
       {
         title: "Credit Card Fraud Analysis | SQL (Mar 2025)",
@@ -454,5 +454,6 @@
   </script>
 </body>
 </html>
+
 
 
