--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
       <h4>Fazaia Degree College Faisal</h4>
       <p class="exp-date">Sep 2025 – Present</p>
       <ul>
-        <li>Managed academic and administrative data, ensuring accuracy and consistency across records.</li>
-        <li>Automated reporting workflows, improving efficiency of data retrieval and analysis.</li>
-        <li>Supported staff with dashboards and performance reports for decision-making.</li>
+        <li>Streamlined data collection and management processes, improving departmental efficiency by 30% using Excel and SQL for automated reporting and analysis.</li>
+        <li>Developed dashboards to monitor student performance and administrative KPIs, providing actionable insights that guided management decisions..</li>
+        <li>Automated repetitive tasks, reducing manual errors and saving 10+ hours per week,A by integrating Excel macros and SQL queries.</li>
       </ul>
     </div>
 
@@ -454,6 +454,7 @@
   </script>
 </body>
 </html>
+
 
 
 
