--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     .hero::before{
       content:"";
       position:absolute; inset:0;
-      background: url("https://iili.io/KxZ5DyF.md.jpg") center/cover no-repeat;
+      background: url("https://iili.io/KxZDF9a.md.jpg") center/cover no-repeat;
       filter: blur(0px) saturate(.95) brightness(.6);
       z-index:0;
     }
@@ -454,6 +454,7 @@
   </script>
 </body>
 </html>
+
 
 
 
