--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       --bg-1:#121212;
       --bg-2:#1E1E1E;
       --panel:#1B1F24;
-      --muted:#aaa;
+      --muted:#FDFDFD;
       --text:#E0E0E0;
       --accent: #00bcd4;
     }
@@ -482,6 +482,7 @@
   </script>
 </body>
 </html>
+
 
 
 
