--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
       <h1>Hi — I'm Huzaifa Moin</h1>
       <div class="subtitle">Data Analyst</div>
       <p>I turn data into clear insights and business outcomes using SQL, Power BI, Python, and Excel — dashboards, forecasts, and anomaly detection that decision-makers trust.</p>
+      <p>⚲ Karachi, Pakistan</p>
       <div class="hero-cta">
         <button class="btn btn-primary" onclick="document.getElementById('projects').scrollIntoView({behavior:'smooth'})">View My Projects</button>
         <a class="btn btn-outline" href="https://drive.google.com/file/d/1eb0yxErnNwIFiJrw53BaiwasEmdPJzH9/view?usp=sharing" target="_blank" rel="noreferrer">Download Resume</a>
@@ -482,6 +483,7 @@
   </script>
 </body>
 </html>
+
 
 
 
